sources/sass/sbplus.scss
/*!
 * Storybook Plus (SB+)
 *
 * @author: Ethan Lin
 * @url: https://github.com/Lin87/storybook-plus
 * @version: 3.6.3
 * Released 10/23/2025
 *
 * @license: GNU GENERAL PUBLIC LICENSE v3
 *
    Storybook Plus is an web application that serves multimedia contents.
    Copyright (C) 2013-2025 Ethan Lin

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 *
 */

@use 'sass:math';

@import "animate.css" screen, projection;
@import "sbplus_fonts.css";

$cntrlBarHeight: 46px;
$titleBarHeight: 30px;
$gutter: 10px;
$font-size-base: 16px;
$default-accent: #0c3b6b;
$default-accent-hover: #06498d;
$default-font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
$border-color: #ccc;
$box-height: 586px;
$body-bg-color: #EFEEE8;
$control-bg-color: rgba(#f2f2f2, 0.95);
$font-size: 16px;

@function rem( $px, $base: $font-size ) {
    @return ( math.div($px , $base) ) * 1rem;
}

@mixin calc( $property, $expression ) {
    #{$property}: -moz-calc(#{$expression}) !important;
    #{$property}: -webkit-calc(#{$expression}) !important;
    #{$property}: calc(#{$expression}) !important;
}

@mixin aspect-ratio( $width, $height ) {
    
    position: relative;
    
    &:before {
        display: block;
        content: "";
        width: 100%;
        padding-top: ( math.div($height, $width) ) * 100%;
    }
    
}

@mixin font-size( $px, $base: $font-size-base ) {
    font-size: $px;
    font-size: ( math.div($px, $base) ) * 1rem;
}

/* general */
html {
    font-size: $font-size;
    height: 100%;
}

body {
    @include font-size( 14px );
    font-family: $default-font-family;
    margin: 0;
    padding: 0;
    height: 100%;
    background-color: $body-bg-color;
}

.sbplus_pop_full {
    position: relative;
    width: 100%;
    height: 100%;
}

.sr-only {
    position: absolute !important;
    width: 1px;
    height: 1px;
    overflow: hidden;
    clip: rect(1px, 1px, 1px, 1px);
}

.visually-hidden-focusable {
    text-decoration: none;
}

.visually-hidden-focusable:focus {
    position: absolute;
    z-index: 1;
    color: #fff;
    padding: 10px;
    border-radius: 6px;
    background-color: $default-accent;
    bottom: 1%;
    left: 50%;
    transform: translateX(-50%);

    &.sr-page-status {
        top: 6%;
        left: 1%;
        bottom: unset;
        transform: none;
        width: 600px;
    }
}

.visually-hidden-focusable:not(:focus):not(:focus-within):not(caption) {
    position: absolute !important;
}

.visually-hidden-focusable:not(:focus):not(:focus-within) {
    height: 1px !important;
    margin: -1px !important;
    overflow: hidden !important;
    padding: 0 !important;
    width: 1px !important;
    clip: rect(0, 0, 0, 0) !important;
    border: 0 !important;
    white-space: nowrap !important;
}
/* ... */

